Resume Flow/objects/Education__c/fields/College_University__c.field-meta.xml
<CustomField>
    <fullName>College_University__c</fullName>
    <label>College / University</label>
    <length>255</length>
    <type>Text</type>
</CustomField>