Resume Flow/objects/Education__c/fields/Degree_or_Program__c.field-meta.xml
<CustomField>
    <fullName>Degree_or_Program__c</fullName>
    <label>Degree or Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>