Resume Flow/objects/Education__c/fields/Edu_Year__c.field-meta.xml
<CustomField>
    <fullName>Edu_Year__c</fullName>
    <formula>Text( Graduation_Month__c)+&apos; &apos;+ Text(Graduation_Year1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edu Year</label>
    <type>Text</type>
</CustomField>