Resume Flow/objects/Education__c/fields/Field_Of_study__c.field-meta.xml
<CustomField>
    <fullName>Field_Of_study__c</fullName>
    <label>Field Of study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>