Resume Flow/objects/Education__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>