Resume Flow/objects/Education__c/fields/Graduation_Month__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Month__c</fullName>
    <label>Graduation Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>