Resume Flow/objects/Education__c/fields/Graduation_Year1__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year1__c</fullName>
    <label>Graduation Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>